ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cae-frontend-service
          servicePort: 8070

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-yjs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/websocket-services: "yjs-server"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: yjs-server
          servicePort: 1234
        path: /yjs(/|$)(.*)
        

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-socket
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "yjs-server"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: yjs-server 
          servicePort: 1234
        path: /socket.io

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cae-backend-outside
          servicePort: 81
        path: /backend(/|$)(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-las2peer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cae-backend-outside
          servicePort: 81
        path: /las2peer


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cae-jenkins-service
          servicePort: 8082
        path: /jenkins


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-deploy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cae-jenkins-service
          servicePort: 8083
        path: /deploy(/|$)(.*)
            

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cae-deploy-backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cae-jenkins-service
          servicePort: 8083
        path: /deploybackend
